Fix icons overlapping navbar on scroll

--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -574,6 +574,10 @@ video {
   position: absolute;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
